--- a/views/pages/contact.pug
+++ b/views/pages/contact.pug
@@ -25,9 +25,9 @@ block content
               include ../../public/svg/icones/email.svg
               | laboratorio@precisionlaboratorio.com.br
           include ../../public/svg/arrow-right.svg
-          span.endereco Rua João Lourenço, 564
+          span.endereco Avenida Santo Amaro, 1.047 - Conj. 1001
             br
-            | Vila Nova Conceição
+            | CEP - 04505-001
             br
             | São Paulo - SP
         .col-sm-7
