--- a/views/pages/contact.pug
+++ b/views/pages/contact.pug
@@ -27,7 +27,7 @@ block content
           include ../../public/svg/arrow-right.svg
           span.endereco Avenida Santo Amaro, 1.047 - Conj. 1001
             br
-            | CEP - 04505-001
+            | Vila Nova Conceição - CEP - 04505-001
             br
             | São Paulo - SP
         .col-sm-7
